--- a/ipva/ipva.html
+++ b/ipva/ipva.html
@@ -5,8 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <script src="./ipva.js"></script>
+    <div class="flex-container">
+        <header class="flex-item">
+            <h1> Calculadora IPVA</h1>
+        </header>
+        <section class="flex-item">
+
+        </section>
+        <footer class="'flex-item">
+            
+        </footer>
+    </div>
 </body>
 </html>
